# loongRisc

./: .clang-format  .clangd  CMakeLists.txt  README.md
.githooks/: pre-push
docs/: README.md
docs/compiler/: compiler-spec.md
docs/isa/: encoding-table.md  isa-spec.md
docs/simulator/: simulator-spec.md
scripts/: format-check.sh  format.sh  install-git-hooks.sh
sim/: CMakeLists.txt
sim/app/: CMakeLists.txt  main.cc
sim/core/: CMakeLists.txt  cpu.cc  cpu.h
sim/engine/: CMakeLists.txt  executor.cc  executor.h
sim/isa/: CMakeLists.txt  decoder.cc  decoder.h
test/: CMakeLists.txt  instruction_ut.cc
